# better-collective-mlops-challenge

./: README.md  buildspec.yml
cloudformation/: 01-mlflow-backend-stack.yaml  02-dagster-ecs-stak.yaml
dagster-app/: Dockerfile
docs/: section_3_answers.md
experiment_tracking/: README.md  log_model.py  pyproject.toml  setup.py
experiment_tracking/db/: init.sql
orchestration/: README.md  job.py  requirements.txt
orchestration/config/: dagster.yaml
orchestration/db/: init.sql
