[project]
name = "experiment-tracking"
author = "Jonathan Deiloff"
version = "0.1.0"
description = "MLFlow environment for experiment tracking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aws>=0.2.5",
    "boto3>=1.39.3",
    "dagster>=1.11.1",
    "mlflow>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "xgboost>=3.0.2",
]
